# KnowForge

./: .gitignore  KnowForge_Project_Blueprint.docx  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260526_0001_auth_chat.py  20260526_0002_chat_threads.py  20260528_0003_user_llm_keys.py  20260528_0004_user_llm_model.py  20260528_0005_user_active_llm_provider.py  20260529_0006_report_job_run_scope.py  45f4c2db259d_add_research_intelligence.py  51d983f8efa0_tier2_workspaces_versions_reports.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  chat.py  contradictions.py  llm_keys.py  promotions.py  reports.py  research.py  wiki.py  (+3 more)
app/core/: config.py  crypto.py  errors.py  mailer.py  security.py
app/db/: __init__.py  models.py  session.py
app/llm/: graph.py
app/llm/providers/: anthropic_client.py  direct_llms.py  errors.py  gemini_client.py  openai_client.py  openrouter_client.py  openrouter_llm.py  openrouter_provider.py  registry.py
app/llmwiki/: __init__.py  chat.py  compaction.py  contradictions.py  embedder.py  groq.py  harness.py  indexer.py  ingest.py  knowledge_graph.py  markdown.py  prompts.py  reports.py  research.py  storage.py  temporal.py  text.py  vector_store.py
app/schemas/: llmwiki.py  workspace.py
app/services/: auth.py  chat_sessions.py  llm_factory.py  llm_keys.py  workspace.py
app/web/: __init__.py
app/web/static/: .apply_patch_marker  app.js  index.html  styles.css
tests/: test_health.py  test_knowledge_graph.py  test_llmwiki.py
