[project]
name = "knowforge"
version = "0.1.0"
description = "Self-hosted AI institutional memory engine built with FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.3,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "pypdf>=4.3,<6.0",
    "groq>=0.13,<1.0",
    "langchain>=0.2,<1.0",
    "langgraph>=0.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
]
ai = [
    "langsmith>=0.1,<1.0",
    "pinecone>=5.0,<6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
